# vita_python_utils

./: .gitignore  README.md  pyproject.toml  utils.py  vita_clean.sh  vita_setup.sh  vita_test.sh
example/: demo_usage.ipynb
example/demo/: .gitignore  CMakeLists.txt  sphere.vtk  vessel_synthesis.cpp
src/phantom_utils/: __init__.py  docker.py  geometry.py  parallel.py
src/vita_python_utils/: docker.py  geometry.py
