[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vita_python_utils"
version = "0.1.0"
description = "Shared utilities for Head and Mice Phantom generation using VItA CCO."
authors = [
  { name="Your Name", email="your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pyvista",
    "vtk",
    "scikit-image",
    "trimesh",
    "meshio"
]

[project.urls]
"Homepage" = "https://github.com/kevinh0718/vita_python_utils.git"

[project.optional-dependencies]
examples = [
    "matplotlib",
    "jupyter",    # Needed to run the notebook
]
dev = [
    "pytest",     # If you add tests later
    "black"       # Formatter
]